--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "formidable": "^3.5.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1"
   }
