--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^7.0.1",
     "formidable": "^3.5.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "nodemailer": "^6.9.3"
   }
 }
